--- a/public/web-login.html
+++ b/public/web-login.html
@@ -1,1 +1,46 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>WebLogin</title>
+</head>
+
+<body>
+    <a id="loginBtn" href="">开始登陆</a>
+</body>
+
+</html>
+
+<script>
+    var loginBtn = document.getElementById('loginBtn');
+    var client_id = "1584819109";
+    var redirect_uri = "https://wilhantianlinebot.herokuapp.com/web-login.html";
+    var state = new String(Math.random()).replace('.', "d");
+
+    var href = 'https://access.line.me/dialog/oauth/weblogin?response_type=code&client_id=' + client_id + '&redirect_uri=' + redirect_uri + '&state=' + state;
+    loginBtn.setAttribute("href", href);
+
+
+    function getUrlParam(paraName) {
+        var url = document.location.toString();
+        var arrObj = url.split("?");
+        if (arrObj.length > 1) {
+            var arrPara = arrObj[1].split("&");
+            var arr;
+            for (var i = 0; i < arrPara.length; i++) {
+                arr = arrPara[i].split("=");
+
+                if (arr != null && arr[0] == paraName) {
+                    return arr[1];
+                }
+            }
+            return "";
+        }
+        else {
+            return "";
+        }
+    }
+</script>
