--- a/public/web-login.html
+++ b/public/web-login.html
@@ -62,7 +62,7 @@
 
     function accessToken(code) { 
         $.ajax({
-            url: "https://api.line.me/v2/oauth/accessToken",
+            url: "https://wilhantianlinebot.herokuapp.com/auth",
             type: 'post',
             contentType: 'application/x-www-form-urlencoded',
             data: {
