--- a/public/web-login.html
+++ b/public/web-login.html
@@ -38,9 +38,9 @@
 
         //获取用户信息
         accessToken(code, function(res){
-            codeText.innerText(res);
+            codeText.innerText = JSON.stringify(res);
         }, function(){
-            codeText.innerText('获取用户信息失败');
+            codeText.innerText = '获取用户信息失败';
         });
     }
 
