--- a/public/admin.html
+++ b/public/admin.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    xxxxxxxxxx
+    <form action="/upload">
+        <input name="hahhaha" type="text">
+        <input name="image" type="file" accept=".jpg,.png">
+    </form>
 </body>
 </html>
