--- a/public/admin.html
+++ b/public/admin.html
@@ -10,6 +10,7 @@
     <form action="/upload">
         <input name="hahhaha" type="text">
         <input name="image" type="file" accept=".jpg,.png">
+        <input type="submit">
     </form>
 </body>
 </html>
