--- a/public/admin.html
+++ b/public/admin.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/upload">
+    <form action="/upload" enctype="multipart/form-data">
         <input name="hahhaha" type="text">
         <input name="image" type="file" accept=".jpg,.png">
         <input type="submit">
