--- a/public/admin.html
+++ b/public/admin.html
@@ -17,55 +17,55 @@
         <textarea name="areas">
             [
                 {
-                    bounds: {
-                        x: 0,
-                        y: 0,
-                        width: 2500,
-                        height: 840
+                    "bounds": {
+                        "x": 0,
+                        "y": 0,
+                        "width": 2500,
+                        "height": 840
                     },
-                    action: {
-                        type: "uri",
-                        label: "banner",
-                        uri: bannerURL
+                    "action": {
+                        "type": "uri",
+                        "label": "banner",
+                        "uri": bannerURL
                     }
                 },
                 {
-                    bounds: {
-                        x: 0,
-                        y: 840,
-                        width: 840,
-                        height: 846
+                    "bounds": {
+                        "x": 0,
+                        "y": 840,
+                        "width": 840,
+                        "height": 846
                     },
-                    action: {
-                        type: "postback",
-                        label: "推荐",
-                        data: "type=推荐"
+                    "action": {
+                        "type": "postback",
+                        "label": "推荐",
+                        "data": "type=推荐"
                     }
                 },
                 {
-                    bounds: {
-                        x: 840,
-                        y: 840,
-                        width: 820,
-                        height: 846
+                    "bounds": {
+                        "x": 840,
+                        "y": 840,
+                        "width": 820,
+                        "height": 846
                     },
-                    action: {
-                        type: "uri",
-                        label: "6699",
-                        uri: homeURL
+                    "action": {
+                        "type": "uri",
+                        "label": "6699",
+                        "uri": homeURL
                     }
                 },
                 {
-                    bounds: {
-                        x: 1660,
-                        y: 840,
-                        width: 840,
-                        height: 846
+                    "bounds": {
+                        "x": 1660,
+                        "y": 840,
+                        "width": 840,
+                        "height": 846
                     },
-                    action: {
-                        type: "postback",
-                        label: "社区",
-                        data: "type=社区"
+                    "action": {
+                        "type": "postback",
+                        "label": "社区",
+                        "data": "type=社区"
                     }
                 }
             ]
