--- a/public/admin.html
+++ b/public/admin.html
@@ -26,7 +26,7 @@
                     "action": {
                         "type": "uri",
                         "label": "banner",
-                        "uri": bannerURL
+                        "uri": "bannerURL"
                     }
                 },
                 {
@@ -52,7 +52,7 @@
                     "action": {
                         "type": "uri",
                         "label": "6699",
-                        "uri": homeURL
+                        "uri": "homeURL"
                     }
                 },
                 {
