--- a/public/admin.html
+++ b/public/admin.html
@@ -164,7 +164,7 @@
                     if (!res.state) {
                         return;
                     }
-                    $('.item-item[data-id="' + id + '"]').remove();
+                    $('.menu-item[data-id="' + id + '"]').remove();
                 },
                 error: function (err) {
                     console.log(err);
