--- a/public/admin.html
+++ b/public/admin.html
@@ -62,8 +62,8 @@
     <form action="/upload" enctype="multipart/form-data" method="POST">
         <input name="name" type="text" placeholder="name">
         <input name="chatBarText" type="text" placeholder="chatBarText">
-        <input name="width" type="text" placeholder="width" value="2500" disabled>
-        <input name="height" type="text" placeholder="height" value="1686" disabled>
+        <input name="width" type="text" placeholder="width" value="2500" readonly>
+        <input name="height" type="text" placeholder="height" value="1686" readonly>
         <textarea name="areas">
             [
                 {
