--- a/public/admin.html
+++ b/public/admin.html
@@ -17,7 +17,9 @@
             height: 400px;
         }
 
-        .menu-list {}
+        .menu-list {
+            display: block;
+        }
 
         .menu-item {
             padding: 8px;
