--- a/public/admin.html
+++ b/public/admin.html
@@ -73,7 +73,7 @@
         <input name="width" type="text" placeholder="width" value="2500" readonly>
         <input name="height" type="text" placeholder="height" value="1686" readonly>
         <textarea name="areas">
-            [
+                [
                 {
                     "bounds": {
                         "x": 0,
@@ -84,7 +84,7 @@
                     "action": {
                         "type": "uri",
                         "label": "banner",
-                        "uri": "bannerURL"
+                        "uri": "https://www.6699.jp/play/?appid=dog"
                     }
                 },
                 {
@@ -97,7 +97,7 @@
                     "action": {
                         "type": "postback",
                         "label": "推荐",
-                        "data": "type=推荐"
+                        "data": "推荐"
                     }
                 },
                 {
@@ -110,7 +110,7 @@
                     "action": {
                         "type": "uri",
                         "label": "6699",
-                        "uri": "homeURL"
+                        "uri": "https://www.6699.jp"
                     }
                 },
                 {
