--- a/public/admin.html
+++ b/public/admin.html
@@ -123,7 +123,7 @@
                     "action": {
                         "type": "postback",
                         "label": "社区",
-                        "data": "type=社区"
+                        "data": "社区"
                     }
                 }
             ]
