--- a/public/admin.html
+++ b/public/admin.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <!-- <base href=""><base> -->
+    <base href="/msgapi"><base>
     <style>
         input {
             display: block;
@@ -137,7 +137,7 @@
 </html>
 
 <script>
-    var baseURL = '/msgapi';
+    var baseURL = $('base').attr('href');
 
     $.ajax({
         url: baseURL + '/get-menus',
