--- a/public/admin.html
+++ b/public/admin.html
@@ -68,7 +68,7 @@
     </div>
     <hr>
     <p>创建新的菜单</p>
-    <form action="/upload" enctype="multipart/form-data" method="POST">
+    <form action="upload" enctype="multipart/form-data" method="POST">
         <input name="name" type="text" placeholder="name">
         <input name="chatBarText" type="text" placeholder="chatBarText">
         <input name="width" type="text" placeholder="width" value="2500" readonly>
