--- a/public/admin.html
+++ b/public/admin.html
@@ -68,7 +68,7 @@
     </div>
     <hr>
     <p>创建新的菜单</p>
-    <form action="upload" enctype="multipart/form-data" method="POST">
+    <form action="" enctype="multipart/form-data" method="POST">
         <input name="name" type="text" placeholder="name">
         <input name="chatBarText" type="text" placeholder="chatBarText">
         <input name="width" type="text" placeholder="width" value="2500" readonly>
@@ -138,6 +138,8 @@
 
 <script>
     var baseURL = $('base').attr('href');
+
+    $('form').attr('action', baseURL + '/upload');
 
     $.ajax({
         url: baseURL + '/get-menus',
