--- a/public/admin.html
+++ b/public/admin.html
@@ -111,7 +111,7 @@
                     "action": {
                         "type": "uri",
                         "label": "6699",
-                        "uri": "https://www.6699.jp"
+                        "uri": "line://app/1595295008-D24zl8AR"
                     }
                 },
                 {
@@ -123,8 +123,8 @@
                     },
                     "action": {
                         "type": "postback",
-                        "label": "社区",
-                        "data": "社区"
+                        "label": "客服",
+                        "data": "客服"
                     }
                 }
             ]
