--- a/public/admin.html
+++ b/public/admin.html
@@ -85,7 +85,7 @@
                     "action": {
                         "type": "uri",
                         "label": "banner",
-                        "uri": "https://www.6699.jp/play/?appid=dog"
+                        "uri": "line://app/1595438846-2Pk99Vrq?appid=dog"
                     }
                 },
                 {
